--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,20 @@ name = "auto-gitmoji"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "amoji"
+path = "src/main.rs"
+
 [dependencies]
+clap = { version = "4.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+anyhow = "1.0"
+
+# Optional dependencies for advanced features
+reqwest = { version = "0.11", features = ["json"], optional = true }
+tokio = { version = "1.0", features = ["full"], optional = true }
+
+[features]
+default = []
+llm = ["reqwest", "tokio"]
