--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,6 @@ serde_json = "1.0"
 anyhow = "1.0"
 thiserror = "1.0"
 
-# Optional dependencies for advanced features
-reqwest = { version = "0.11", features = ["json"], optional = true }
-tokio = { version = "1.0", features = ["full"], optional = true }
-
 [features]
 default = []
-llm = ["reqwest", "tokio"]
+# llm = ["reqwest", "tokio"]
